--- a/index.html
+++ b/index.html
@@ -53,24 +53,35 @@
     </main>
     <footer>
       <div class="footer-container">
-        <div class="left-footer">
+        <div class="footer-left">
           <h3>About Catalog-Z</h3>
-          <ul>
-            <li>Accept</li>
-            <li>T&C</li>
-            <li>Legal Info</li>
-            <li>Document</li>
-          </ul>
+          <p>
+            Catalog-Z is free Bootstrap 5 Alpha 2 HTML template for video and
+            photo websites. You can freely use this TemplateMo layout for a
+            front end integration with any kind of CMS website.
+          </p>
         </div>
-        <div class="right-footer">
-          <h3>Our Links</h3>
-          <ul>
-            <li>Date & Time</li>
-            <li>Advertise</li>
-            <li>Support</li>
-            <li>Contact</li>
-          </ul>
+        <div class="footer-right">
+          <div class="footer-social">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+          <br />
+          <div class="footer-links">
+            <h3>Our Links</h3>
+            <a href="#">Advertise</a>
+            <a href="#">Support</a>
+            <a href="#">Our Company</a>
+            <a href="#">Contact</a>
+          </div>
         </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>Copyright 2020 Catalog-Z Company. All rights reserved.</p>
+        <p>Designed by TemplateMo</p>
       </div>
     </footer>
   </body>
