--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="below-heading">
         <button>Previous</button>
         <div class="middle-div">
-          <button>1</button>
+          <button class="active">1</button>
           <button>2</button>
           <button>3</button>
           <button>4</button>
@@ -51,37 +51,52 @@
         <button>Next</button>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="footer-container">
-        <div class="footer-left">
-          <h3>About Catalog-Z</h3>
-          <p>
-            Catalog-Z is free Bootstrap 5 Alpha 2 HTML template for video and
-            photo websites. You can freely use this TemplateMo layout for a
-            front end integration with any kind of CMS website.
-          </p>
-        </div>
-        <div class="footer-right">
-          <div class="footer-social">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+        <div class="footer-content">
+          <div class="footer-section">
+            <h3>About Catalog-Z</h3>
+            <p>
+              Catalog-Z is our document library HTML template for video and
+              photo websites. You can freely use this template for a front-end,
+              easy-to-use site! To get a theme of CMSimple use!
+            </p>
           </div>
-          <br />
-          <div class="footer-links">
+          <div class="footer-section">
             <h3>Our Links</h3>
-            <a href="#">Advertise</a>
-            <a href="#">Support</a>
-            <a href="#">Our Company</a>
-            <a href="#">Contact</a>
+            <div class="footer-links">
+              <div class="footer-column">
+                <a href="#">Advertise</a>
+                <a href="#">Support</a>
+                <a href="#">Company</a>
+                <a href="#">Contact</a>
+              </div>
+              <div class="footer-column">
+                <!-- Social Media Icons -->
+                <div class="social-icons">
+                  <a href="#" class="social-icon">F</a>
+                  <a href="#" class="social-icon">I</a>
+                  <a href="#" class="social-icon">T</a>
+                  <a href="#" class="social-icon">L</a>
+                  <a href="#" class="social-icon">E</a>
+                </div>
+                <div class="footer-column">
+                  <a href="#">Terms of Use</a>
+                  <a href="#">Privacy Policy</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="footer-bottom">
-        <p>Copyright 2020 Catalog-Z Company. All rights reserved.</p>
-        <p>Designed by TemplateMo</p>
+        <!-- Copyright and Credit at the bottom -->
+        <div class="footer-bottom">
+          <div class="footer-copyright">
+            <p>Copyright 2020 Catalog-Z Company. All rights reserved.</p>
+          </div>
+          <div class="footer-credit">
+            <p>Designed by <span>Spandy</span></p>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
